--- a/client/src/components/Signup/style.css
+++ b/client/src/components/Signup/style.css
@@ -1,4 +1,5 @@
-.signup-container {  display: flex;
+.signup-container { 
+  display: flex;
   gap: 30px;
 }
 .account-image {
@@ -11,29 +12,22 @@
   align-items: center;
   margin-bottom: 50px;
   margin-top: 120px;
-  gap: 20px;
+  gap: 50px;
   width: 18%;
 }
 
-.signup-container form h1 {
+.signup-intro h1 {
   font-size: 18px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande","Lucida Sans", Arial, sans-serif;
   text-align: start;
   width: 100%;
 }
 
-.signup-container form p {
+.signup-intro p {
   font-size: 12px;
   text-align: start;
   width: 100%;
   margin-top: 20px;
-}
-
-.signup-box {
-  display: flex;
-  flex-direction: column;
-  gap: 70px;
 }
 
 .signup-boxInputs {
@@ -52,5 +46,10 @@ form .link-login {
 .signup-error {
   color: red;
   font-family: Arial;
+  font-size: 12px;
+}
+
+.signup-redditor {
+  width: 100%;
   font-size: 12px;
 }
