--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,4 +1,5 @@
-.navbar-appBar {  height: 50px;
+.navbar-appBar {
+  height: 50px;
   display: flex;
   justify-content: center;
 }
@@ -8,9 +9,16 @@
   align-items: center;
 }
 
-.logo-container {
+/* First section in the navbar */
+.title-container {
   display: flex;
-  gap: 7px;
+  gap: 30px;
+  justify-content: space-between;
+}
+
+.logo-box {
+  display: flex;
+  gap: 10px;
 }
 
 .navbar-logo {
@@ -20,6 +28,22 @@
 .reddit {
   font-size: 25px !important;
   font-family: cursive !important;
+}
+
+.home-box {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.home-caption {
+  font-size: 14px !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-weight: 500 !important;
+}
+
+.home-icon {
+  font-size: 27px !important;
 }
 
 /* search input */
@@ -32,7 +56,47 @@
   font-family: cursive;
 }
 
+/* Last section */
 .navbar-buttons-container {
   display: flex;
   gap: 20px;
+}
+
+/* When the user Logged */
+.navbar-userContainer {
+  display: flex;
+  gap: 30px;
+
+}
+
+.navbar-userInfo {
+  display: flex;
+  gap: 8px;
+}
+
+.navbar-userInfo .username {
+  font-size: 13px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.navbar-userInfo .karma {
+  font-size: 12px;
+  color: #a8aaab;
+  width: 100%;
+  text-align: start ;
+}
+
+.navbar-userImage {
+  width: 30px;
+}
+
+.button-menu {
+  border: none;
+  background-color: white;
+  cursor: pointer;
+} 
+
+.KeyboardArrowDownIcon {
+  color: black;
+  font-Size:25px;
 }
